# anylogicPLE-mcp

./: .env.example  .gitignore  EXAMPLES.md  FoodSecurityMalaysia_Ch10_ENTREGABLE.md  LICENSE  README.md  WINDOWS_SETUP.md  ch10_extracted.txt  install.sh  install_windows.bat  pyproject.toml
src/anylogic_mcp/: __init__.py  cloud_client.py  model_builder.py  ple_validator.py  sd_builder.py  sd_schema.py  sd_templates.py  sd_validator.py  server.py
tests/: test_food_security_malaysia.py  test_model_builder.py  test_ple_validator.py  test_sd_builder.py  test_sd_schema.py  test_sd_templates.py
