[project]
name = "anylogic-mcp-server"
version = "0.1.0"
description = "MCP server that generates AnyLogic PLE-compliant .alp simulation files"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anylogic_mcp"]

[project.scripts]
anylogic-mcp = "anylogic_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
